python/testData/highlighting/fStringLiterals.py
a = <error descr="Python version 2.7 does not support a 'F' prefix">f</error>""
a = <error descr="Python version 2.7 does not support a 'F' prefix">F</error>""
a = <error descr="Python version 2.7 does not support a 'RF' prefix">rf</error>""
a = <error descr="Python version 2.7 does not support a 'FR' prefix">fr</error>""
a = <error descr="Python version 2.7 does not support a 'FU' prefix">fu</error>""
a = <error descr="Python version 2.7 does not support a 'UF' prefix">uf</error>""
a = <error descr="Python version 2.7 does not support a 'BF' prefix">bf</error>""
a = <error descr="Python version 2.7 does not support a 'FB' prefix">fb</error>""
a = <error descr="Python version 2.7 does not support a 'UFR' prefix">ufr</error>""
